overlay: Mitigate issue with dropdown list widget getting clipped.
This isn't a complete fix, but we move the widget's popup to be
on/below the button to open the widget. We also move the bot owner
field to be on the top of the page so that we can see most of the
widget before it is clipped by the parent overlay.

We have discussed some approaches for a permanent fix on:

https://chat.zulip.org/#narrow/stream/321-s/topic/DropdownListWidget/near/894674

--- a/static/styles/settings.scss
+++ b/static/styles/settings.scss
@@ -1906,6 +1906,11 @@ body:not(.night-mode) #settings_page .custom_user_field .datepicker {
         margin: 9px;
     }
 
+    .dropdown-menu {
+        top: -7px; // -(margin+padding), both are set by bootstrap.
+        bottom: auto;
+    }
+
     .dropdown-list-body {
         position: relative;
         height: auto;
